Task: Seperate transition variables

--- a/__config.scss
+++ b/__config.scss
@@ -1,4 +1,6 @@
-$uploader-height: 				32px !default;
-$uploader-gutter:				14px !default;
-$uploader-transitions: 			true !default;
+$uploader-height: 							32px !default;
+$uploader-gutter:							14px !default;
 
+$uploader-transitions: 						true !default;
+$uploader-transition-speed:					200ms !default;
+$uploader-transition-timing:				ease-in-out;
