Fix: Transition timing default value

--- a/__config.scss
+++ b/__config.scss
@@ -3,4 +3,4 @@ $uploader-gutter:							14px !default;
 
 $uploader-transitions: 						true !default;
 $uploader-transition-speed:					200ms !default;
-$uploader-transition-timing:				ease-in-out;
+$uploader-transition-timing:				ease-in-out !default;
